@@ -1,9 +1,9 @@
 {
-  "timestamp" : "2022-06-14T08:20:01Z",
-  "count" : 1,
-  "count_minmax" : [ 1, 1 ],
-  "count_decinc" : [ -0, +1 ],
-  "uniques" : 1,
-  "uniques_minmax" : [ 1, 1 ],
-  "uniques_decinc" : [ -0, +1 ]
+  "timestamp" : "2022-06-15T01:19:41Z",
+  "count" : 5,
+  "count_minmax" : [ 1, 5 ],
+  "count_decinc" : [ -0, +5 ],
+  "uniques" : 3,
+  "uniques_minmax" : [ 1, 3 ],
+  "uniques_decinc" : [ -0, +3 ]
 }
