@@ -1,17 +1,10 @@
 {
-  "timestamp" : "2022-06-14T08:20:01Z",
-  "count_outdated" : 329,
-  "uniques_outdated" : 185,
-  "count" : 357,
-  "uniques" : 205,
+  "timestamp" : "2022-06-15T01:19:41Z",
+  "count_outdated" : 333,
+  "uniques_outdated" : 188,
+  "count" : 362,
+  "uniques" : 207,
   "clones" : [
-    {
-      "timestamp": "2022-05-31T00:00:00Z",
-      "count": 3,
-      "count_minmax": [ 1, 4 ],
-      "uniques": 3,
-      "uniques_minmax": [ 1, 3 ]
-    },
     {
       "timestamp": "2022-06-01T00:00:00Z",
       "count": 2,
@@ -105,10 +98,10 @@
     },
     {
       "timestamp": "2022-06-14T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 1 ],
-      "uniques": 1,
-      "uniques_minmax": [ 1, 1 ]
+      "count": 5,
+      "count_minmax": [ 1, 5 ],
+      "uniques": 3,
+      "uniques_minmax": [ 1, 3 ]
     }
   ]
 }
